--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
     extends:
       service: base
     command: npm run build
+  lint:
+    extends:
+      service: base
+    command: npm run lint
   develop:
     extends:
       service: base
