Development adjustments: run compile only in docker, no need to install npm locally if desired

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
     extends:
       service: base
     command: npm run lint
+  compile:
+    extends:
+      service: base
+    command: npm run tsc
   develop:
     extends:
       service: base
