--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.3",
+    "prettier": "2.0.5",
     "ts-loader": "^7.0.2",
     "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-merge": "^4.2.2"
