--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/JLouhela/cavez.io#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "pixi.js": "^5.2.3",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "webpack": "^4.43.0",
@@ -39,6 +40,7 @@
     "@types/webpack-merge": "^4.1.5",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.3",
