--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "dependencies": {
     "@geckos.io/client": "^1.4.1",
     "@geckos.io/server": "^1.4.1",
+    "@types/pngjs": "^3.4.2",
     "ecsy": "https://github.com/JLouhela/ecsy/tarball/master",
     "express": "^4.17.1",
     "keycode-js": "^2.0.3",
     "pixi.js": "^5.2.3",
+    "pngjs": "^5.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
