--- a/docker-compose_dev.yml
+++ b/docker-compose_dev.yml
@@ -1,7 +1,7 @@
-version: '2'
+version: '3'
 services:
   base:
-    image: node:11
+    image: node:17
     volumes:
       - nodemodules:/usr/src/node_modules
       - .:/usr/src
@@ -28,7 +28,7 @@ services:
     command: npm run develop
     ports:
       - '1234:1234/tcp'
-      - '19900:20000/udp'
+      - '19900:2000000/udp'
 volumes:
   nodemodules:
     external: true
