--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cavez.io",
-  "type": "commonjs",
+  "type": "module",
   "version": "1.0.0",
   "description": "Multiplayer browser cave flying game",
-  "main": "server.js",
+  "exports": "./server.js",
   "scripts": {
-    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "lint": "eslint -c .eslintrc.cjs --ext .ts src",
     "build": "webpack --config dist/webpack.prod.js",
     "develop": "tsc && cross-env NODE_ENV=development nodemon dist/src/server/server.js",
     "start": "cross-env NODE_ENV=production node dist/src/server/server.js",
@@ -27,6 +27,7 @@
     "@geckos.io/server": "^2.2.0",
     "@types/pngjs": "^6.0.1",
     "ecsy": "^0.4.2",
+    "eslint-plugin-react": "^7.29.4",
     "express": "^4.17.3",
     "keycode-js": "^3.1.0",
     "node-fetch": "^2.6.1",
@@ -38,21 +39,24 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/html-webpack-plugin": "^3.2.6",
-    "@types/mini-css-extract-plugin": "^2.5.0",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-middleware": "^5.0.2",
     "@types/webpack-merge": "^4.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "eslint": "^8.14.0",
+    "eslint-plugin-jsdoc": "^39.2.8",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "nodemon": "^2.0.15",
     "prettier": "2.6.2",
     "ts-loader": "^9.2.8",
-    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.6.3",
+    "typescript": "^4.7.0-dev.20220425",
     "webpack-dev-middleware": "^5.3.1",
     "webpack-merge": "^5.8.0"
   }
