--- a/package.json
+++ b/package.json
@@ -39,9 +39,6 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/html-webpack-plugin": "^3.2.6",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-middleware": "^5.0.2",
-    "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "cross-env": "^7.0.3",
@@ -54,9 +51,10 @@
     "mini-css-extract-plugin": "^2.6.0",
     "nodemon": "^2.0.15",
     "prettier": "2.6.2",
+    "resolve-typescript-plugin": "^1.2.0",
     "ts-loader": "^9.2.8",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.7.0-dev.20220425",
+    "typescript": "^4.7.0-dev.20220428",
     "webpack-dev-middleware": "^5.3.1",
     "webpack-merge": "^5.8.0"
   }
