--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
-version: '3'
+version: '3.4'
 services:
   start:
     image: cavez_prod:latest
-    volumes:
-      - .:/usr/src
-    working_dir: /usr/src
+    network_mode: host
     command: 'npm run start'
     deploy:
       resources:
         limits:
           cpus: '0.5'
           memory: 500M
-    ports:
-      - '1234:1234/tcp'
-      - '19900:20000/udp'
