--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@geckos.io/client": "^2.2.0",
     "@geckos.io/server": "^2.2.0",
     "@types/pngjs": "^6.0.1",
+    "dotenv": "^16.0.1",
     "ecsy": "^0.4.2",
     "eslint-plugin-react": "^7.29.4",
     "express": "^4.17.3",
